Add mouseWheel and grid navigationMode

--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
 				progress: false,
 				center: true,
 				hash: true,
+                mouseWheel: true,
+                navigationMode: 'grid',
 
 				transition: 'slide', // none/fade/slide/convex/concave/zoom
 
