Remove periods from a few kurals

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </section>
 
                     <section>
-                        <p class="kural">அங்கணத்து ளுக்க வமிழ்தற்றாற் றங்கணத்தர்<br>அல்லார்முற் கோட்டி கொளல்.</p>
+                        <p class="kural">அங்கணத்து ளுக்க வமிழ்தற்றாற் றங்கணத்தர்<br>அல்லார்முற் கோட்டி கொளல்</p>
                         <p class="comment">
                             அங்கணத்துள், அதாவது பழம்பொருளைக் கொட்டும் சிறுநீர் கழிக்கும் சாக்கடையில், பாலை ஊற்றுவது போன்றது, தாம் சாராத இடத்திற்குப் போய் உரையாடல் நிகழ்த்துவது. சான்றோர் ஒருவற்கு தொலைக்காட்சி உரையாடல் அழைப்பு வந்தால், அதில் பங்குபெறத்தான் வேண்டுமா என்ற கேள்வி மிக முக்கியமானது. மக்கள் கேளிக்கைக்காக வெறும் கூச்சலையே ஊக்குவிக்கும் தொலைக்காட்சி நிகழ்ச்சிகளுக்கு சான்றோர் பங்களிக்கமுடியாது. அவர் தெளிசொல் அங்கு ஒலிக்கும் சண்டைச்சொல்லோடு கரைந்துவிடும்.
                         </p>
@@ -71,7 +71,7 @@
                     </section>
 
                     <section>
-                        <p class="kural">எழுதுங்காற் கோல்காணாக் கண்ணேபோற் கொண்கன்<br>பழிகாணேன் கண்ட விடத்து.</p>
+                        <p class="kural">எழுதுங்காற் கோல்காணாக் கண்ணேபோற் கொண்கன்<br>பழிகாணேன் கண்ட விடத்து</p>
                         <p class="comment">
                             தட்டச்சும்பொழுது கண் விசைபலகையைக் காண்பதில்லை. திரையையே காண்கிறது. பலகை ஒரு கருவிதான். எழுதுவதற்கு அதுதான் உதவிபுரிகிறது என்றாலும், அதுவே ஒரு தடையாகவும் உள்ளது. மனத்தில் உள்ளதை அதே வேகத்தில் எழுத்தாக மாற்றும்பொழுது தட்டச்சும் கணத்தில் எண்ணம் மாறலாம் சிந்தனை தடைபடலாம். காதலரிடம் சண்டைப்போட்டு, பிறகு அவருடைய தவறும் நான் சொன்ன பழிச்சொல்லும் நாங்கள் சந்திப்பதற்குத் தடையாக உள்ளது. உள்ளதென்றாலும் அவரைக் கண்ட நேரத்திலே நான் ஏனோ அவற்றை மறந்துவிட்டேன்.
                             <br><br>
